Fix spacing on restaurant snippet on review form page

--- a/app/assets/stylesheets/components/review_form/review_form.scss
+++ b/app/assets/stylesheets/components/review_form/review_form.scss
@@ -35,6 +35,7 @@
 .form-input article img {
   width: 60px;
   height: 60px;
+  margin-right: 10px
 }
 
 .form-input article a {
